@@ -9,6 +9,7 @@ import org.springframework.web.bind.annotation.RestController;
 
 import java.util.Arrays;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
 @RestController
@@ -17,10 +18,8 @@ public class MobileController {
 
     /**
      * 测试url:
-     * http://localhost:8080/api/video?status=installing
-     * http://localhost:8080/api/video?status=installed
-     * @param status
-     * @return
+     * <a href="http://localhost:8080/api/video?status=installing">...</a>
+     * <a href="http://localhost:8080/api/video?status=installed">...</a>
      */
     @GetMapping("/video")
     public ResponseEntity<Map<String, String>> getVideo(@RequestParam("status") String status) {
@@ -30,13 +29,13 @@ public class MobileController {
         // 根据传入的状态改变前端显示的内容和颜色
         if ("installing".equalsIgnoreCase(status)) {
             // 传递安装进行中的状态，并显示红色
-            AddVaEngineWsServer.sendVaEngineInstallStatus("1234", "installing", Arrays.asList("Installation in progress..."));
+            AddVaEngineWsServer.sendVaEngineInstallStatus("1234", "installing", List.of("Installation in progress..."));
         } else if ("installed".equalsIgnoreCase(status)) {
             // 传递安装完成的状态，并显示绿色
-            AddVaEngineWsServer.sendVaEngineInstallStatus("1234", "installed", Arrays.asList("Installation completed successfully"));
+            AddVaEngineWsServer.sendVaEngineInstallStatus("1234", "installed", List.of("Installation completed successfully"));
         } else {
             // 其他情况，默认状态
-            AddVaEngineWsServer.sendVaEngineInstallStatus("1234", "unknown", Arrays.asList("Unknown status"));
+            AddVaEngineWsServer.sendVaEngineInstallStatus("1234", "unknown", List.of("Unknown status"));
         }
 
         return ResponseEntity.ok(response);
